name:                   stubby
version:                0.1.0.0
synopsis:               A small web server for stubbing external systems during development
-- description:
homepage:               https://github.com/mrak/stubby4hs
license:                Apache-2.0
license-file:           LICENSE
author:                 Eric Mrak
maintainer:             mail@ericmrak.info
copyright:              2014
category:               Web
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     README

source-repository head
    type:               git
    location:           https://github.com/mrak/stubby4hs

executable stubby
    main-is:            stubby.hs

    hs-source-dirs:     src

    other-modules:      Stubby.Net.Admin
                        Stubby.Net.Stubs
                        Stubby.Net.LoggerMiddleware
                        Stubby.CLI.Arguments
                        Stubby.CLI.Logging
                        Stubby.Data.Endpoint
                        Stubby.Data.Request
                        Stubby.Data.Response

    build-depends:      wai,
                        time,
                        text,
                        warp,
                        yaml,
                        http-types,
                        bytestring,
                        ansi-terminal,
                        optparse-applicative,
                        base                 >=4.7 && <5

    other-extensions:   OverloadedStrings

    default-language:   Haskell2010

    ghc-options:        -O
                        -threaded
                        -with-rtsopts=-N
                        -Wall
