name:                   stubby
version:                0.1.0.0
synopsis:               A small web server for stubbing external systems during development
-- description:
homepage:               https://github.com/mrak/stubby4hs
license:                Apache-2.0
license-file:           LICENSE
author:                 Eric Mrak
maintainer:             mail@ericmrak.info
copyright:              2014
category:               Web
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     README

source-repository head
    type:               git
    location:           https://github.com/mrak/stubby4hs

library
    hs-source-dirs:     src/lib

    exposed-modules:    Stubby
                        Stubby.Settings

    other-modules:      Stubby.Net.Admin
                        Stubby.Net.Stubs
                        Stubby.Net.LoggerMiddleware
                        Stubby.CLI.Logging
                        Stubby.Data.Endpoint
                        Stubby.Data.Request
                        Stubby.Data.Response
                        Stubby.Data.Common

    other-extensions:   OverloadedStrings

    default-language:   Haskell2010

    build-depends:      wai,
                        time,
                        text,
                        warp,
                        yaml,
                        async,
                        old-locale,
                        http-types,
                        bytestring,
                        scientific,
                        ansi-terminal,
                        case-insensitive,
                        unordered-containers,
                        optparse-applicative,
                        base >=4.7 && <5

    ghc-options:        -O
                        -threaded
                        -with-rtsopts=-N
                        -Wall

executable stubby
    main-is:            Main.hs

    hs-source-dirs:     src/bin

    build-depends:      stubby,
                        optparse-applicative,
                        base >=4.7 && <5

    other-extensions:   OverloadedStrings

    default-language:   Haskell2010

    ghc-options:        -O
                        -threaded
                        -with-rtsopts=-N
                        -Wall
